<resources>
    <string name="app_name">App Figma</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="creatAccountTextView">Create an account</string>
    <string name="buttonCreatAccount">Create an account</string>
    <string name="buttonSingInGoogle">Sing-in with Google</string>
    <string name="buttonSearch">Search</string>
    <string name="yourOrderText">Your orders</string>
    <string name="order_button_back">Back to Register Page</string>
    <string name="text_login_to_accompte">Login to my account</string>
    <string name="text_view_welcom"></string>
    <string name="email_adress">Email Adress</string>
    <string name="pwd">Password Adress</string>
    <string name="enjoy_text_view">Enjoy Delicious food</string>
</resources>